syntax = "proto3";

import "CharacterType.proto";

message Character {
  string id = 1;
  optional CharacterType type = 2;
  bool isMoving = 3;
  double x = 4;
  double y = 5;
  uint32 facingDirection = 6;
  uint32 movingDirection = 7;
  optional float speed = 8;
}
