syntax = "proto3";

message Spawn {
  string id = 1;
  bool canMove = 2;
}
